clientVerseGit/force-app/main/default/objects/List_Member__c/List_Member__c.object-meta.xml
<CustomObject>
    <description>Contacts, accounts, lists, or campaigns contained in a List</description>
    <label>List Member</label>
    <nameField>
        <displayFormat>LM-{0000000}</displayFormat>
        <label>List Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>