clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Additional_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sponsors__c</fullName>
    <description>Additional firm contacts who sponsored the addition of this individual as a list member.</description>
    <label>Additional Sponsors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>