clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>List Members</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <type>Lookup</type>
</CustomField>