clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Initial_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first firm contact who sponsored the addition of this individual as a list member.</description>
    <label>Initial Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sponsored List Members</relationshipLabel>
    <relationshipName>Sponsored_List_Members</relationshipName>
    <type>Lookup</type>
</CustomField>