clientVerseGit/force-app/main/default/objects/List_Member__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <label>List</label>
    <referenceTo>List__c</referenceTo>
    <relationshipLabel>List Members</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>