clientVerseGit/force-app/main/default/objects/List_Member__c/fields/MAP_Id__c.field-meta.xml
<CustomField>
    <fullName>MAP_Id__c</fullName>
    <description>The Id of the corresponding list member in the marketing automation platform</description>
    <label>MAP Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>