clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Source_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_List_Name__c</fullName>
    <description>The List Name and Id which this contact was added.</description>
    <label>Source List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>