clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Source_Lists__c.field-meta.xml
<CustomField>
    <fullName>Source_Lists__c</fullName>
    <label>Source Lists</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>