clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Source_Sub_List__c.field-meta.xml
<CustomField>
    <fullName>Source_Sub_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Sub List this List Member was sourced from.</description>
    <label>Source Sub List</label>
    <referenceTo>Source_List__c</referenceTo>
    <relationshipLabel>List Members</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <type>Lookup</type>
</CustomField>