clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
                <default>true</default>
                <label>Included</label>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>