clientVerseGit/force-app/main/default/objects/List_Member__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>