clientVerseGit/force-app/main/default/objects/List_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>List__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Initial_Sponsor__c</columns>
    <columns>Additional_Sponsors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>